@@ -80,7 +80,6 @@
         --with-selinux \
         --with-python \
         --without-perl \
-        --enable-build-lib64 \
         --enable-build-pic \
         --enable-build-pie \
         --enable-build-versionscript \
